Added header and footer texts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title> Submission </title>
 </head>
 <body>
+    <div class="header">
+        To begin let's do something. I don't what or when or how or anything. I am filling this arrea with some text before  creating a form. Hopefully things
+        won't turn out to be very very bad. So We should dive into a non sense form.
+    </div>
     <h3>Let's Do It!!</h3>
     <form action="#" method="post">
         <div>
@@ -36,5 +40,8 @@
             <button type="submit">Let's Go!</button>
         </div>
     </form>
+    <div class="footer">
+        Already Have an account? <a href="#">Log in</a>
+    </div>
 </body>
 </html>
