--- a/index.html
+++ b/index.html
@@ -23,27 +23,36 @@
             </div>
             <h3>Let's Do It!!</h3>
             <form action="#" method="post">
-                <div>
-                    <label for="fname">First Name:</label>
-                    <input type="text" id="fname" name="fname" placeholder="Thor" required>
-
-                    <label for="lname">Last Name:</label>
-                    <input type="text" id="lname" name="lname" placeholder="Odinson" required>
+                <div class="secondflex">
+                    <div class="itemone">
+                        <label for="fname">First Name:</label>
+                        <input type="text" id="fname" name="fname" placeholder="Thor" required>
+                    </div>
+                    <div class="itemtwo">
+                        <label for="lname">Last Name:</label>
+                        <input type="text" id="lname" name="lname" placeholder="Odinson" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="mail" placeholder="someone@email.com" required>
-
-                    <label for="number">Phone Number:</label>
-                    <input type="number" id="number" name="number" placeholder="98xxxxxxxx" minlength="10"
-                        maxlength="10" required>
+                <div class="secondflex">
+                    <div class="itemone">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="mail" placeholder="someone@email.com" required>
+                    </div>
+                    <div class="itemtwo">
+                        <label for="number">Phone Number:</label>
+                        <input type="number" id="number" name="number" placeholder="98xxxxxxxx" minlength="10"
+                            maxlength="10" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="pw">Password:</label>
-                    <input type="password" id="pw" name="password" placeholder="Password" required>
-
-                    <label for="pwrepeat">Confirm Password:</label>
-                    <input type="password" id="pwrepeat" placeholder="Re-enter Password" required>
+                <div class="secondflex">
+                    <div class="itemone">
+                        <label for="pw">Password:</label>
+                        <input type="password" id="pw" name="password" placeholder="Password" required>
+                    </div>
+                    <div class="itemtwo">
+                        <label for="pwrepeat">Confirm Password:</label>
+                        <input type="password" id="pwrepeat" placeholder="Re-enter Password" required>
+                    </div>
                 </div>
                 <div>
                     <button type="submit">Let's Go!</button>
