--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 won't turn out to be very very bad. So We should dive into a non sense form.
             </div>
             <h3>Let's Do It!!</h3>
+            <div class="pwmismatch"></div>
             <form action="#" method="post">
                 <div class="secondflex">
                     <div class="itemone">
