--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="itemtwo">
                         <label for="number">Phone Number:</label>
-                        <input type="text" id="number" name="number" placeholder="98xxxxxxxx" minlength="10"
+                        <input type="number" id="number" name="number" placeholder="98xxxxxxxx" minlength="10"
                             maxlength="10" required>
                     </div>
                 </div>
